stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@700&display=swap');

:root {

    --card-width: 128px;
    --card-height: 128px;
    --card-margin: 8px;

    --nav-width: 196px;
    --nav-height-temp: calc(var(--card-margin) * 3);
    --nav-height: calc(var(--nav-height-temp) + 40px);
    --nav-image-width: 128px;

    --font-size: 16px;
    --font-size-semititle: 18px;
    --font-size-title: 24px;

    --text-color: rgb(255, 255, 255, 0.85);
    --background-color: rgb(5, 20, 32);

    --background-color-transparent: rgba(var(var(--background-color)), 0);
    --background-color-semi-transparent: rgba(var(var(--background-color)), 0.2);

    --link-background-color: rgba(255, 255, 255, 0.1);
    --link-background-hover-color: rgba(255, 255, 255, 0.2);
    --link-text-color: rgba(255, 255, 255, 0.85);
    --link-text-hover-color: rgba(255, 255, 255, 1);
    --link-darker-background-color: rgba(255, 255, 255, 0.2);
    --link-lighter-background-color: rgba(255, 255, 255, 0.2);

    --card-text-color: var(--link-text-color);
    --card-text-hover-color: var(--link-text-hover-color);
}


@media only screen and (hover: none) and (pointer: coarse) {

    :root {
        --nav-width: 30vw;
        --nav-height: 95vw;
        --nav-image-width: 30vw;
        --card-width: 30vw;
        --card-height: 40vw;

        --font-size: 3vw;
        --font-size-semititle: 4vw;
        --font-size-title: 5vw;
    }

}

* {
    font-family: 'Lato', sans-serif;
}

a,
a:visited,
a:hover,
a:active {
    color: inherit;
}

body {
    margin: 0;
    background-color: var(--background-color);
    min-width: 540px;
    font-size: var(--font-size);
    display: flex;
    overflow: visible;
}

a {
    text-decoration: none;
}

p {
    color: var(--text-color);
}

h3 {
    color: var(--text-color);
}

.link {
    padding: 8px 16px;
    margin-bottom: 16px;

    background-color: var(--link-background-color);
    color: var(--link-text-color);
    text-shadow: 1px 1px 2px rgb(0, 0, 0);

    border-radius: 16px;
    cursor: pointer;
    box-sizing: border-box;

    transition: .5s;
}

.link:hover {
    color: var(--link-text-hover-color);
    background-color: var(--link-background-hover-color);
}

.link.active {
    background-color: var(--link-lighter-background-color);
}

/* 
█▄ █ ▄▀▄ █ █ 
█ ▀█ █▀█ ▀▄▀  
 */

.nav {
    float: left;
    min-width: var(--nav-width);

    padding: 16px;
}

.nav-image {
    text-align: center;
    margin-bottom: 16px;
}

.nav-image img {
    width: var(--nav-image-width);
}

.nav-title {
    color: var(--text-color);
    font-size: var(--font-size-title);
    width: 100%;
    text-align: center;
    margin-bottom: 16px;
}

.nav .link:hover {
    padding-left: 22px;
}

/* 
▄▀▀ ▄▀▄ █▀▄ █▀▄ ▄▀▀ 
▀▄▄ █▀█ █▀▄ █▄▀ ▄█▀ 
*/

#content {
    width: 100%;
    scroll-behavior: smooth;
    overflow: scroll;
    max-height: 100vh;
}

.card {
    position: relative;
    display: inline-block;

    width: var(--card-width);
    height: var(--card-height);

    margin: var(--card-margin);
    border-radius: 16px;

    overflow: hidden;
}

.card .title {
    transition: 2s;
    color: transparent;
    text-align: center;
}

.card:hover .title {
    transition: .5s;
    color: var(--card-text-hover-color);
    text-shadow: 1px 1px 2px rgb(0, 0, 0);
}

.card .title {
    position: absolute;

    width: 100%;

    bottom: 0px;
    left: 0;

    padding-bottom: 8px;
    padding-top: 8px;
}

.card img {
    position: absolute;
    left: 0;
    top: 0;
    z-index: -10;
    width: 100%;
}

.card .cardGradient {
    position: absolute;
    width: 100%;
    height: 100%;
    background: linear-gradient(0deg, var(--background-color) 0%, rgba(0, 0, 0, 0) 100%);
    opacity: 0;
    transition: 3s;
}

.card:hover .cardGradient {
    transition: .5s;
    opacity: 1;
}

.pixelated {
    image-rendering: pixelated;
}

.separator {
    color: var(--text-color);
    font-size: var(--font-size-semititle);
    border-color: rgba(87, 96, 180, 0.2);
    width: 100%;
}

/* 
█▀▄ ▄▀▄ ▄▀  ██▀ ▄▀▀ 
█▀  █▀█ ▀▄█ █▄▄ ▄█▀  
*/

.page {
    color: var(--text-color);
    display: flex;
    flex-direction: row;
    margin: 32px 16px 016px;
}

.page .left {
    margin-right: 32px;
}

.page h1 {
    margin: 0 0 16px 0;
    padding: 0;
}

.page .right {
    display: flex;
    flex-direction: column;
    padding: 16px;
}

.page .right .image {
    width: 128px;
    float: right;
}

.page .right .link {
    float: right;
    width: 128px;
    margin-top: 16px;
    text-align: center;

    background-color: var(--link-background-color);
    color: var(--link-text-color);
    text-shadow: 1px 1px 2px rgb(0, 0, 0);

    border-radius: 16px;

    border-bottom: 4px solid var(--link-darker-background-color);
}

.page .right .link:hover {
    transform: translateY(4px);
    border-bottom: 0 solid var(--link-darker-background-color);
}

/* 
█▄ █ ██▀ █   █ ▄▀▀ 
█ ▀█ █▄▄ ▀▄▀▄▀ ▄█▀
*/

#newsPage {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#newsImage {
    /* display: none; */
    height: calc(100vh - 40px);
    max-height: 500px;
    align-items: right;
    padding: 20px 10px 0 0;
}

@media only screen and (max-width: 1000px) {
    #newsImage {
        display: none;
    }
}

#newsContainer {
    margin-right: 10px;
    padding-right: 10px;
    color: white;
    overflow-y: scroll;
    max-height: 90vh;
}

.newsPiece {
    padding-bottom: 30px;
    margin-bottom: 45px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.newsPiece:last-child {
    margin-bottom: 50px;
    border-bottom: none;
}

.newsPiece .title {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: var(--font-size-semititle);
    font-weight: bold;
}

.newsPiece .modInfo a {
    color: #a0e6ff;
}


/* 
▄▀▄ ▀█▀ █▄█ ██▀ █▀▄    █▄ ▄█ ██▀ █▀▄ █ ▄▀▄ 
▀▄▀  █  █ █ █▄▄ █▀▄    █ ▀ █ █▄▄ █▄▀ █ █▀█ 
*/

@media only screen and (hover: none) and (pointer: coarse) {

    #content {
        overflow: visible;
    }

    #nav {
        position: fixed;
        height: 100vh;
        /* height: 35.1vh; */
    }

    .card {
        margin: 1%;
        float: right;
        height: 35vw;
    }

    .cardGradient {
        opacity: 1;
    }

    .card .title {
        color: white;
    }

    .separator {
        float: right;
        text-align: right;
        padding-right: 2vw;
    }

    .newsPiece .title {
        flex-direction: column;
    }

    .newsPiece .title .titleDate {
        font-size: var(--font-size);
    }

}

/* @media screen and (max-width: 500px) {

    body {
        overflow: scroll;
    }

    #nav {
        position: fixed;
        width: calc(100% - 144px);
    }

    #nav-image {
        position: fixed;
        margin-left: 0;
        right: 16px;
    }

    .link {
        float: left;
        margin-right: 8px;
    }

    #content {
        position: fixed;
        top: 128px;
    }
} */

::placeholder {
    color: rgba(18, 18, 41, 0.144);
}

/* width */
::-webkit-scrollbar {
    width: 10px;
    background: transparent;
}

/* Track */
::-webkit-scrollbar-track {
    background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #ffffff10;
    border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #ffffff56;
}

::-webkit-scrollbar-corner {
    background: transparent;
}

